test_programs/compile_failure/access_private_dependency_item/foo/src/lib.nr
mod bar {
    pub fn baz() {}
}
